--- a/static/client.html
+++ b/static/client.html
@@ -5,8 +5,8 @@
         <title>Gestionnaire de prêt</title>
         <!--<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>-->
         <script src="jquery.js"></script>
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>        <style>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>        <style>
             body{
                 margin: 20px;
             }
